# peak-over-threshold

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: example.npy  example1.npy
examples/: 01-validate-pot.ipynb  02-validate-spot.ipynb  03-validate-dspot.ipynb
src/: dspot.py  pot.py  spot.py
src/peak_over_threshold/: dspot.py  pot.py  spot.py
src/peak_over_threshold/utils/: cal_threshold.py  grimshaw.py
src/utils/: grimshaw.py
test/: dspot.ipynb  pot.ipynb  spot.ipynb
